# solana-ido-pool

./: .gitignore  Anchor.toml  README.md  package.json
programs/sstars_ido_contract/: Cargo.toml
programs/sstars_ido_contract/src/: lib.rs
scripts/: db.ts  distributor.ts  tool.ts
tests/: sstars_ido_contract.ts  utils.ts
tests/keys/: keyinfo.md
